@@ -19,6 +19,8 @@ unity (7.4.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Marco Trevisan (Treviño) ]
   * SwitcherView: close the mouse-selected application on middle-click
     (LP: #1574689)
+  * UnityScreen, UnityWindow: cleanup a little the code, and ensure
+    overridden CompositeWindow functions get actually called
 
  -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Sun, 15 May 2016 01:00:09 +0200
 
